# polyglot-packaging-test

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  README.md  configure  cpp-core  index.html  setup.py
cpp/: CMakeLists.txt  add_8cpp_source.html  add_8hpp_source.html  annotated.html  annotated_dup.js  classAnimals_1_1Animal-members.html  classAnimals_1_1Animal.html  classAnimals_1_1Animal.js  classAnimals_1_1Animal__coll__graph.map  classAnimals_1_1Animal__coll__graph.md5  classAnimals_1_1Animal__inherit__graph.map  classAnimals_1_1Animal__inherit__graph.md5  classAnimals_1_1Corgi-members.html  classAnimals_1_1Corgi.html  classAnimals_1_1Corgi.js  classAnimals_1_1Corgi__coll__graph.map  classAnimals_1_1Corgi__coll__graph.md5  classAnimals_1_1Corgi__inherit__graph.map  classAnimals_1_1Corgi__inherit__graph.md5  classAnimals_1_1Dog-members.html  classAnimals_1_1Dog.html  classAnimals_1_1Dog.js  classAnimals_1_1Dog__coll__graph.map  classAnimals_1_1Dog__coll__graph.md5  classAnimals_1_1Dog__inherit__graph.map  classAnimals_1_1Dog__inherit__graph.md5  classes.html  classes_8hpp_source.html  cpp-core  dir_87652d24a8a31d1dad45e238ec51c44c.html  dir_df511e5bd85cec96854b39d5e1c27aa8.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group__Functions.html  group__Functions.js  hierarchy.html  (+12 more)
cpp/docs/: Doxyfile  Doxyfile.defaults  README.md  header.html
cpp/scripts/: build_docs.sh  clean_all.sh  run_tests.sh
python/: .buildinfo  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
r/: 404.html  (+12 more)
(+58 files in other folders)
