[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "polyglot-packaging"
version = "0.0.1"
dependencies = [
]

authors = [
  { name="Ben Parks", email="bnprks+github@gmail.com" },
]
description = "Demo polyglot R/python library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bnprks/polyglot-packaging-test"
"Bug Tracker" = "https://github.com/bnprks/polyglot-packaging-test/issues"

[project.optional-dependencies]
test = [
    'pytest',
]